# bags

./: .gitignore  README.md  cabal.project  flake.nix  justfile
.github/workflows/: nix-ci.yml
lib/agda2hs-fixer/: agda2hs-fixer.cabal
lib/agda2hs-fixer/haskell/Language/Agda2hs/Agda/: Types.hs
lib/agda2hs-fixer/haskell/Language/Agda2hs/Agda/Parser/: ExportList.hs
lib/agda2hs-fixer/haskell/Language/Agda2hs/Haskell/: Types.hs
lib/bags/: CHANGELOG.md  agda2hs-rewrites.yaml  bags.agda-lib  bags.cabal  generate-haskell.sh
lib/bags/agda/: bags.agda
lib/bags/agda/Control/Monad/: Prop.agda
lib/bags/agda/Data/: Bag.agda  BagOld.agda  Indexed.agda  Table.agda
lib/bags/agda/Data/Bag/: Core.agda  Counts.agda  Def.agda  Found.agda  Prop.agda  Raw.agda
lib/bags/agda/Data/Bag/Prop/: Conversion.agda  Core.agda  Deletion.agda  Operations.agda
lib/bags/agda/Data/Bag/Quotient/: Prop.agda
lib/bags/agda/Data/Indexed/: Def.agda  Prop.agda
lib/bags/agda/Data/Map/Prop/: Extra.agda
lib/bags/agda/Data/Monoid/: Extra.agda  Morphism.agda  Refinement.agda
lib/bags/agda/Data/Table/: Def.agda  Prop.agda
lib/bags/agda/Haskell/Data/: Bag.agda
lib/bags/agda/Haskell/Data/Bag/: Quotient.agda
lib/bags/agda/Haskell/Data/List/: Extra.agda
lib/bags/agda/Haskell/Law/: Extensionality.agda  MonadPlus.agda
lib/bags/agda/Haskell/Law/Extensionality/: Extra.agda
lib/bags/agda/Haskell/Law/Monad/: Extra.agda
lib/bags/agda/Haskell/Law/MonadPlus/: Def.agda  List.agda  Maybe.agda
lib/bags/agda/Haskell/Prim/: Alternative.agda  MonadPlus.agda
lib/bags/agda/Haskell/Prim/Monad/: Extra.agda
lib/bags/haskell/Data/: Bag.hs  BagOld.hs  Table.hs
lib/bags/haskell/Data/Bag/: Counts.hs  Def.hs  Found.hs  Prop.hs  Quotient.hs  Raw.hs
lib/bags/haskell/Data/Bag/Prop/: Conversion.hs  Core.hs  Deletion.hs  Operations.hs
lib/bags/haskell/Data/List/: Extra.hs
lib/bags/haskell/Data/Monoid/: Extra.hs  Morphism.hs  Refinement.hs
lib/bags/haskell/Data/Table/: Def.hs  Prop.hs
nix/: lib.nix
